# Plan2Scene

./: .gitignore  CMakeLists.txt  README.md
res/: FLOOR_PLAN.dwg  apartment.dxf  examination-room.dwg  examination-room.dxf  sample-floor-plan.dxf
src/: drw_parser.cpp  drw_parser.hpp  main.cpp  primitives.hpp  render_primitive.cpp  render_primitive.hpp
